packages/swc-plugin-workflow/transform/tests/errors/invalid-default-exports-step/output-step.js
// Error: default class export
export default class MyClass {
    method() {}
}
